--- a/bin/gui/view/ViewAtualizaCliente.fxml
+++ b/bin/gui/view/ViewAtualizaCliente.fxml
@@ -12,11 +12,11 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="325.0" prefWidth="709.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="gui.controllers.ViewAtualizaClienteController">
+<AnchorPane prefHeight="325.0" prefWidth="709.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewAtualizaClienteController">
    <children>
       <Line endX="-105.0" endY="245.0" layoutX="479.0" layoutY="85.0" startX="-105.0" startY="-85.0" stroke="#827f7f" />
-      <Button fx:id="btAtualiza" layoutX="561.0" layoutY="281.0" mnemonicParsing="false" onAction="#atualizaCliente" prefHeight="25.0" prefWidth="71.0" text="Atualizar" />
-      <Label layoutX="432.0" layoutY="32.0" text="Digite os novos dados:">
+      <Button fx:id="btAtualiza" layoutX="560.0" layoutY="280.0" mnemonicParsing="false" onAction="#atualizaCliente" prefHeight="26.0" prefWidth="84.0" text="Atualizar" />
+      <Label layoutX="411.0" layoutY="32.0" text="Digite os novos dados:">
          <font>
             <Font name="System Bold" size="21.0" />
          </font>
@@ -29,7 +29,7 @@
       </TableView>
       <Button fx:id="btVoltar" layoutX="5.0" layoutY="2.0" mnemonicParsing="false" onAction="#voltaScene" prefHeight="16.0" prefWidth="62.0" text="Voltar" />
       <Line endX="-199.0" endY="145.2928924560547" layoutX="192.0" layoutY="-114.0" startX="517.0000610351562" startY="145.29290771484375" stroke="#827f7f" />
-      <GridPane layoutX="432.0" layoutY="75.0" vgap="10.0">
+      <GridPane layoutX="420.0" layoutY="76.0" prefHeight="192.0" prefWidth="224.0" vgap="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="92.0" minWidth="10.0" prefWidth="72.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="149.0" minWidth="10.0" prefWidth="128.0" />
@@ -47,11 +47,11 @@
             <TextField fx:id="txtEmailCliente" promptText="Email do cliente" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="CPF:" />
             <Label text="Nome:" GridPane.rowIndex="1" />
-            <Label prefHeight="17.0" prefWidth="36.0" text="Email:" GridPane.rowIndex="2" />
+            <Label prefHeight="17.0" prefWidth="45.0" text="Email:" GridPane.rowIndex="2" />
             <TextField fx:id="txtTelefoneCliente" promptText="Telefone do cliente" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Label prefHeight="17.0" prefWidth="50.0" text="Telefone:" GridPane.rowIndex="3" />
+            <Label prefHeight="17.0" prefWidth="64.0" text="Telefone:" GridPane.rowIndex="3" />
             <TextField fx:id="txtRedeSocialCliente" promptText="Rede social cliente" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Label text="Rede Social:" GridPane.rowIndex="4" />
+            <Label prefHeight="21.0" prefWidth="85.0" text="Rede Social:" GridPane.rowIndex="4" />
          </children>
       </GridPane>
    </children>
