--- a/src/gui/view/View.fxml
+++ b/src/gui/view/View.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Line?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewController">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="695.0" prefWidth="1377.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewController">
    <children>
       <Line endX="-100.0" endY="673.0" layoutX="223.0" layoutY="31.0" startX="-100.0" startY="-5.000007629394531" stroke="#827f7f" />
       <Pane layoutX="144.0" layoutY="64.0">
@@ -36,7 +36,7 @@
                   <Insets />
                </opaqueInsets>
             </TableView>
-            <DatePicker fx:id="dpData" layoutX="14.0" layoutY="5.0" onAction="#carregaAgenda" prefHeight="34.0" prefWidth="275.0" />
+            <DatePicker fx:id="dpData" layoutX="14.0" layoutY="2.0" onAction="#carregaAgenda" prefHeight="34.0" prefWidth="275.0" />
          </children>
       </Pane>
     <AnchorPane layoutX="459.0" layoutY="89.0" minHeight="0.0" minWidth="0.0" prefHeight="392.0" prefWidth="865.0">
@@ -140,7 +140,7 @@
                            </children>
                         </GridPane>
                         <Button fx:id="btPesquisar" layoutX="182.0" layoutY="124.0" mnemonicParsing="false" onAction="#onBtPesquisaAgendamento" text="Pesquisar" />
-                        <TableView fx:id="tvAgendamento" layoutX="284.0" layoutY="13.0" prefHeight="147.0" prefWidth="498.0">
+                        <TableView fx:id="tvAgendamento" layoutX="296.0" layoutY="5.0" prefHeight="147.0" prefWidth="498.0">
                            <columns>
                               <TableColumn fx:id="colunaCliente" prefWidth="153.0" text="Cliente" />
                               <TableColumn fx:id="colunaFuncionarioAgendamento" prefWidth="155.0" text="Funciońario" />
@@ -148,8 +148,8 @@
                               <TableColumn fx:id="colunaExcluir" prefWidth="72.0" text="Excluir?" />
                            </columns>
                         </TableView>
-                        <Line endX="-100.0" endY="204.0" layoutX="373.0" layoutY="-35.0" startX="-100.0" startY="30.0" stroke="#827f7f" />
-                        <Button fx:id="btExcluir" layoutX="792.0" layoutY="137.0" mnemonicParsing="false" onAction="#onBtExcluirAgendamento" prefHeight="25.0" prefWidth="71.0" text="Excluir" />
+                        <Line endX="-100.0" endY="193.16668701171875" layoutX="373.0" layoutY="-35.0" startX="-100.0" startY="30.0" stroke="#827f7f" />
+                        <Button fx:id="btExcluir" layoutX="808.0" layoutY="124.0" mnemonicParsing="false" onAction="#onBtExcluirAgendamento" prefHeight="25.0" prefWidth="71.0" text="Excluir" />
                      </children>
                   </AnchorPane>
             </content>
@@ -175,7 +175,7 @@
           </Menu>
         </menus>
       </MenuBar>
-      <GridPane layoutX="14.0" layoutY="36.0" prefHeight="242.0" prefWidth="100.0" vgap="10.0">
+      <GridPane layoutX="6.0" layoutY="44.0" prefHeight="281.0" prefWidth="111.0" vgap="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -186,10 +186,10 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="btCriaFuncionario" mnemonicParsing="false" onAction="#onBtCriaFuncionarioAction" prefHeight="89.0" prefWidth="100.0" text="Funcionários" />
-            <Button fx:id="btCriaCliente" mnemonicParsing="false" onAction="#onBtCriaClienteAction" prefHeight="90.0" prefWidth="100.0" text="Clientes" GridPane.rowIndex="1" />
-            <Button fx:id="btCaixa" mnemonicParsing="false" onAction="#onBtAbreCaixaAction" prefHeight="65.0" prefWidth="100.0" text="Caixa" GridPane.rowIndex="2" />
-            <Button fx:id="btPagamento" mnemonicParsing="false" onAction="#onBtAbrePagamentoAction" prefHeight="72.0" prefWidth="100.0" text="Pagamento" GridPane.rowIndex="3" />
+            <Button fx:id="btCriaFuncionario" mnemonicParsing="false" onAction="#onBtCriaFuncionarioAction" prefHeight="70.0" prefWidth="111.0" text="Funcionários" />
+            <Button fx:id="btCriaCliente" mnemonicParsing="false" onAction="#onBtCriaClienteAction" prefHeight="248.0" prefWidth="111.0" text="Clientes" GridPane.rowIndex="1" />
+            <Button fx:id="btCaixa" mnemonicParsing="false" onAction="#onBtAbreCaixaAction" prefHeight="63.0" prefWidth="112.0" text="Caixa" GridPane.rowIndex="2" />
+            <Button fx:id="btPagamento" mnemonicParsing="false" onAction="#onBtAbrePagamentoAction" prefHeight="62.0" prefWidth="111.0" text="Pagamento" GridPane.rowIndex="3" />
          </children>
       </GridPane>
    </children>
