--- a/bin/gui/view/ViewAtualizaCliente.fxml
+++ b/bin/gui/view/ViewAtualizaCliente.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="325.0" prefWidth="709.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewAtualizaClienteController">
+<AnchorPane prefHeight="325.0" prefWidth="709.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewAtualizaClienteController">
    <children>
       <Line endX="-105.0" endY="245.0" layoutX="479.0" layoutY="85.0" startX="-105.0" startY="-85.0" stroke="#827f7f" />
       <Button fx:id="btAtualiza" layoutX="560.0" layoutY="280.0" mnemonicParsing="false" onAction="#atualizaCliente" prefHeight="26.0" prefWidth="84.0" text="Atualizar" />
@@ -23,7 +23,7 @@
       </Label>
       <TableView fx:id="tvCliente" layoutX="-1.0" layoutY="32.0" onMouseClicked="#selecionaCliente" prefHeight="299.0" prefWidth="375.0">
          <columns>
-            <TableColumn fx:id="colunaCpf" minWidth="0.0" prefWidth="185.0" text="CPF" />
+            <TableColumn fx:id="colunaId" minWidth="0.0" prefWidth="185.0" text="ID" />
             <TableColumn fx:id="colunaNome" prefWidth="189.00001525878906" text="Nome" />
          </columns>
       </TableView>
@@ -42,10 +42,10 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextField fx:id="txtCpfCliente" promptText="CPF do cliente" GridPane.columnIndex="1" />
+            <TextField fx:id="txtIdCliente" promptText="ID do cliente" GridPane.columnIndex="1" />
             <TextField fx:id="txtNomeCliente" promptText="Nome do cliente" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="txtEmailCliente" promptText="Email do cliente" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label text="CPF:" />
+            <Label text="ID:" />
             <Label text="Nome:" GridPane.rowIndex="1" />
             <Label prefHeight="17.0" prefWidth="45.0" text="Email:" GridPane.rowIndex="2" />
             <TextField fx:id="txtTelefoneCliente" promptText="Telefone do cliente" GridPane.columnIndex="1" GridPane.rowIndex="3" />
