--- a/bin/gui/view/ViewCliente.fxml
+++ b/bin/gui/view/ViewCliente.fxml
@@ -21,9 +21,9 @@
          </font></Label>
       <TableView fx:id="tvCliente" layoutX="9.0" layoutY="255.0" prefHeight="297.0" prefWidth="761.0">
         <columns>
-          <TableColumn fx:id="colunaCpf" minWidth="0.0" prefWidth="142.0" text="CPF" />
-          <TableColumn fx:id="colunaNome" prefWidth="153.0" text="Nome" />
-            <TableColumn fx:id="colunaRedeSocial" prefWidth="103.0" text="Rede Social" />
+          <TableColumn fx:id="colunaId" minWidth="0.0" prefWidth="51.0" text="ID" />
+          <TableColumn fx:id="colunaNome" prefWidth="214.0" text="Nome" />
+            <TableColumn fx:id="colunaRedeSocial" prefWidth="133.0" text="Rede Social" />
             <TableColumn fx:id="colunaEmail" prefWidth="167.0" text="Email" />
             <TableColumn fx:id="colunaTelefone" prefWidth="120.0" text="Telefone" />
             <TableColumn fx:id="colunaSelect" prefWidth="75.0" text="Excluir?" />
@@ -41,22 +41,19 @@
         <rowConstraints>
           <RowConstraints />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextField fx:id="txtCpfCliente" prefHeight="25.0" prefWidth="177.0" promptText="CPF do cliente" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="txtNomeCliente" promptText="Nome do cliente" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="txtEmailCliente" promptText="Email do cliente" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="txtTelefoneCliente" promptText="Telefone do cliente" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <Label prefHeight="17.0" prefWidth="67.0" text="Telefone:" GridPane.rowIndex="5" />
-            <Label prefHeight="17.0" prefWidth="43.0" text="Email:" GridPane.rowIndex="3" />
-            <Label text="Nome:" GridPane.rowIndex="2" />
-            <Label text="CPF:" GridPane.rowIndex="1" />
-            <Label text="Rede Social:" GridPane.rowIndex="4" />
-            <TextField fx:id="txtRedeSocialCliente" promptText="Rede Social do cliente" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="txtNomeCliente" promptText="Nome do cliente" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtEmailCliente" promptText="Email do cliente" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtTelefoneCliente" promptText="Telefone do cliente" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label prefHeight="17.0" prefWidth="67.0" text="Telefone:" GridPane.rowIndex="4" />
+            <Label prefHeight="17.0" prefWidth="43.0" text="Email:" GridPane.rowIndex="2" />
+            <Label text="Nome:" GridPane.rowIndex="1" />
+            <Label text="Rede Social:" GridPane.rowIndex="3" />
+            <TextField fx:id="txtRedeSocialCliente" promptText="Rede Social do cliente" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
       </GridPane>
    </children>
