Alteração da viewCliente
Adicionando um aviso do que é preciso colocar no minimo num cliente.

--- a/bin/gui/view/ViewCliente.fxml
+++ b/bin/gui/view/ViewCliente.fxml
@@ -56,5 +56,6 @@
             <TextField fx:id="txtRedeSocialCliente" promptText="Rede Social do cliente" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
       </GridPane>
+      <Label layoutX="14.0" layoutY="230.0" text="Campo mínimo: Nome" textFill="#ae0000" />
    </children>
 </AnchorPane>
