--- a/src/gui/view/View.fxml
+++ b/src/gui/view/View.fxml
@@ -15,11 +15,14 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="695.0" prefWidth="1377.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewController">
    <children>
@@ -33,11 +36,11 @@
           </Menu>
         </menus>
       </MenuBar>
-      <SplitPane dividerPositions="0.0" layoutX="84.0" layoutY="25.0" prefHeight="671.0" prefWidth="1293.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <SplitPane fx:id="splitPaneCentral" dividerPositions="0.002181818181818182" layoutX="84.0" layoutY="25.0" prefHeight="671.0" prefWidth="1293.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="669.0" prefWidth="135.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="669.0" prefWidth="0.0">
                <children>
-                  <GridPane layoutX="9.0" layoutY="66.0" prefHeight="281.0" prefWidth="111.0" vgap="10.0">
+                  <GridPane layoutX="10.0" layoutY="11.0" prefHeight="281.0" prefWidth="111.0" vgap="10.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
@@ -48,17 +51,70 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Button fx:id="btCriaFuncionario" mnemonicParsing="false" onAction="#onBtCriaFuncionarioAction" prefHeight="70.0" prefWidth="111.0" text="Funcionários" />
-                        <Button fx:id="btCriaCliente" mnemonicParsing="false" onAction="#onBtCriaClienteAction" prefHeight="248.0" prefWidth="111.0" text="Clientes" GridPane.rowIndex="1" />
-                        <Button fx:id="btCaixa" mnemonicParsing="false" onAction="#onBtAbreCaixaAction" prefHeight="63.0" prefWidth="112.0" text="Caixa" GridPane.rowIndex="2" />
-                        <Button fx:id="btPagamento" mnemonicParsing="false" onAction="#onBtAbrePagamentoAction" prefHeight="62.0" prefWidth="111.0" text="Pagamento" GridPane.rowIndex="3" />
+                        <Button fx:id="btCriaFuncionario" mnemonicParsing="false" onAction="#onBtCriaFuncionarioAction" prefHeight="67.0" prefWidth="59.0">
+                           <graphic>
+                              <ImageView fitHeight="54.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../model/images/icons8_female_worker_48px.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic></Button>
+                        <Button fx:id="btCriaCliente" mnemonicParsing="false" onAction="#onBtCriaClienteAction" prefHeight="63.0" prefWidth="60.0" GridPane.rowIndex="1">
+                           <graphic>
+                              <ImageView fitHeight="54.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../model/images/icons8_businesswoman_48px.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic></Button>
+                        <Button fx:id="btCaixa" mnemonicParsing="false" onAction="#onBtAbreCaixaAction" prefHeight="63.0" prefWidth="61.0" GridPane.rowIndex="2">
+                           <graphic>
+                              <ImageView fitHeight="54.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../model/images/icons8_cash_register_80px_2.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic></Button>
+                        <Button fx:id="btPagamento" mnemonicParsing="false" onAction="#onBtAbrePagamentoAction" prefHeight="62.0" prefWidth="62.0" GridPane.rowIndex="3">
+                           <graphic>
+                              <ImageView fitHeight="54.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../model/images/icons8_cash_in_hand_80px.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic></Button>
                      </children>
                   </GridPane>
+                  <Label layoutX="81.0" layoutY="39.0" text="Funcionários">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="81.0" layoutY="107.0" text="Clientes">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="83.0" layoutY="179.0" text="Caixa">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="82.0" layoutY="254.0" text="Pagamento">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="92.0" layoutY="647.0" text="Versão 2.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="92.0" AnchorPane.rightAnchor="13.0">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="669.0" prefWidth="1200.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="669.0" prefWidth="1347.0">
                <children>
-                  <TableView fx:id="tvFuncionario" layoutX="18.0" layoutY="67.0" prefHeight="378.0" prefWidth="274.0" style="-fx-border-color: #827f7f;">
+                  <TableView fx:id="tvFuncionario" layoutX="50.0" layoutY="61.0" prefHeight="378.0" prefWidth="274.0" style="-fx-border-color: #827f7f;">
                     <columns>
                       <TableColumn fx:id="colunaFuncionario" editable="false" prefWidth="200.0" sortable="false" text="Manicures" />
                     </columns>
@@ -69,7 +125,7 @@
                         <Insets />
                      </opaqueInsets>
                   </TableView>
-                  <DatePicker fx:id="dpData" layoutX="17.0" layoutY="27.0" onAction="#carregaAgenda" prefHeight="34.0" prefWidth="275.0" />
+                  <DatePicker fx:id="dpData" layoutX="50.0" layoutY="21.0" onAction="#carregaAgenda" prefHeight="34.0" prefWidth="275.0" />
                   <TabPane depthTest="DISABLE" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="202.0" prefWidth="1255.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-6.0" AnchorPane.rightAnchor="-1.0">
                     <tabs>
                       <Tab text="Excluir">
@@ -93,7 +149,15 @@
                                           <TextField fx:id="tfCliente" GridPane.columnIndex="1" />
                                        </children>
                                     </GridPane>
-                                    <Button fx:id="btPesquisar" layoutX="182.0" layoutY="124.0" mnemonicParsing="false" onAction="#onBtPesquisaAgendamento" text="Pesquisar" />
+                                    <Button fx:id="btPesquisar" layoutX="169.0" layoutY="124.0" mnemonicParsing="false" onAction="#onBtPesquisaAgendamento" text="Pesquisar">
+                                       <graphic>
+                                          <ImageView fitHeight="27.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../../model/images/icons8_search_48px_1.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                    </Button>
                                     <TableView fx:id="tvAgendamento" layoutX="296.0" layoutY="5.0" prefHeight="147.0" prefWidth="498.0">
                                        <columns>
                                           <TableColumn fx:id="colunaCliente" prefWidth="153.0" text="Cliente" />
@@ -103,7 +167,15 @@
                                        </columns>
                                     </TableView>
                                     <Line endX="-100.0" endY="193.16668701171875" layoutX="373.0" layoutY="-35.0" startX="-100.0" startY="30.0" stroke="#827f7f" />
-                                    <Button fx:id="btExcluir" layoutX="808.0" layoutY="124.0" mnemonicParsing="false" onAction="#onBtExcluirAgendamento" prefHeight="25.0" prefWidth="71.0" text="Excluir" />
+                                    <Button fx:id="btExcluir" layoutX="808.0" layoutY="119.0" mnemonicParsing="false" onAction="#onBtExcluirAgendamento" prefHeight="33.0" prefWidth="87.0" text="Excluir">
+                                       <graphic>
+                                          <ImageView fitHeight="25.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../../model/images/icons8_trash_48px.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                    </Button>
                                     <GridPane layoutX="1220.0" layoutY="84.0" prefHeight="79.0" prefWidth="145.0" AnchorPane.rightAnchor="11.0">
                                       <columnConstraints>
                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -117,13 +189,28 @@
                                           <Label fx:id="labelStatus" alignment="CENTER" contentDisplay="CENTER" prefHeight="39.0" prefWidth="150.0" textAlignment="CENTER" GridPane.rowIndex="1" />
                                        </children>
                                     </GridPane>
+                                    <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="299.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../model/images/icons8_businesswoman_48px.png" />
+                                       </image>
+                                    </ImageView>
+                                    <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="449.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../model/images/icons8_female_worker_48px.png" />
+                                       </image>
+                                    </ImageView>
+                                    <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="604.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../model/images/icons8_calendar_48px.png" />
+                                       </image>
+                                    </ImageView>
                                  </children>
                               </AnchorPane>
                         </content>
                       </Tab>
                     </tabs>
                   </TabPane>
-                  <ScrollPane fitToHeight="true" layoutX="302.0" layoutY="43.0" prefHeight="411.0" prefWidth="1063.0" style="-fx-border-color: #827f7f;" AnchorPane.leftAnchor="302.0" AnchorPane.rightAnchor="25.0">
+                  <ScrollPane fitToHeight="true" layoutX="334.0" layoutY="36.0" prefHeight="411.0" prefWidth="1021.0" style="-fx-border-color: #827f7f;" AnchorPane.leftAnchor="334.0" AnchorPane.rightAnchor="14.0">
                      <content>
                         <TableView fx:id="tvAgenda" onMouseClicked="#carregaAgendamento" style="-fx-alignment: CENTER;">
                           <columns>
@@ -196,6 +283,16 @@
                         </TableView>
                      </content>
                   </ScrollPane>
+                  <ImageView fx:id="iVSplit" fitHeight="34.0" fitWidth="34.0" layoutX="7.0" layoutY="10.0" onMouseClicked="#abreFechaSplit" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../model/images/icons8_squared_menu_24px.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="51.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../model/images/icons8_female_worker_48px.png" />
+                     </image>
+                  </ImageView>
                </children>
             </AnchorPane>
         </items>
